<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/tan_background"
android:orientation="vertical"
    tools:context="com.example.mckinnely.atlantatourguide.MainActivity">


    <ImageView
        android:id="@+id/android_Atlanta_image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@drawable/atlantabg"
        android:contentDescription="@string/home_image" />

    <TextView
        android:id="@+id/numbers"
        style="@style/CategoryStyle"
        android:background="#838687"

        android:text="@string/restaurants"/>


    <TextView
        android:id="@+id/family"
        style="@style/CategoryStyle"
        android:background="#6a6d6e"
        android:text="@string/parks_and_outdoors" />

    <TextView
        android:id="@+id/colors"
        style="@style/CategoryStyle"
        android:background="#7f8384"
        android:text="@string/shopping" />

    <TextView
        android:id="@+id/phrases"
        style="@style/CategoryStyle"
        android:background="#6a6d6e"
        android:text="@string/night_life" />

</LinearLayout>